	* Fixed bug #17190: Make the drag area on the split bars wider than 1px

2011-01-21  Tolleiv Nietsch  <typo3@tolleiv.de>

	* Synchronized external repositories of version (tag 4.5.0rc1) and workspaces (tag 4.5.0rc1)
	* Fixed bug #16935: tx_coreupdates_installversioning is obsolete

2011-01-21  Ernesto Baschny  <ernst@cron-it.de>

	* Fixed bug #17184: Disable the CSRF protection in ExtDirect calls coming from the frontend (Thanks to Stefan Galinski)
	* Fixed bug #17201: The unit test for t3lib_formprotection_BackendFormProtection is broken (Thanks to Helmut Hummel)
	* Follow-up to issue #15589: Move debug functions to own utility class, missing t3lib_div commit from original patch, and declared all relevant methods "static" (Thanks to Stefan Galinski)
	* Fixed issue #17065: Use Swift Mailer in core (t3lib_mail_*) and deprecate t3lib_htmlmail and related settings (Thanks to Jigal van Hemert)
	* Fixed bug #17173: CSRF: In the user settings module, saving form data is not possible if simulate user option is used (Thanks to Helmut Hummel)
	* Follow-up to issue #16878: Keep t3lib_utility_Client::getBrowserInfo backwards compatible, deprecate 'system' and only use 'all_systems' from now on
	* Fixed bug #16994: ExtDirect in frontend generates php warnings (Thanks to Stefan Galinski)
	* Fixed issue #17198: Introduce setting "defaultMailFromName" and move defaultMailFromAddress to [MAIL] section (Thanks to Jigal van Hemert)
	* Fixed issue #17175: t3lib_compressor should write .htaccess to set Expires headers for .js/.css files (Thanks to Steffen Gebert)
	* Fixed bug #17120: Problem with the integration of third-party trees (Thanks to Stefan Galinksi)
	* Follow-up to issue #11103: Cleanup of _.htaccess and references to misc/advanced.htaccess in config_default

2011-01-21  Ingo Renner  <ingo@typo3.org>

	* Fixed issue #17188: [reports] change status update task to use the new default From email address setting from config_default